Fixed issue with account dropdown overflowing off of the left of the screen on smaller screens. dropdown li elements for account dropdown are no longer getting selected from media query. Removed unnecessary arrow span element from Dropdown.jsx

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,11 +35,11 @@
     align-items: center;
   }
 
-  .nav-sidebar li {
+  .nav-sidebar nav li {
     justify-self: center;
   }
 
-  .nav-sidebar li {
+  .nav-sidebar nav li {
     width: fit-content;
     border-radius: 50%;
   }
